--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
